--- a/2048 3D cube merge/Assets/Resources/Localization/locale_en.json
+++ b/2048 3D cube merge/Assets/Resources/Localization/locale_en.json
@@ -3,6 +3,14 @@
     {
       "key": "MAIN_MENU.PLAY.BUTTON_TEXT",
       "value": "Play"
+    },
+    {
+      "key": "PLAY_MENU.YOU_LOSE.BUTTON_TEXT",
+      "value": "You Lose"
+    },
+    {
+      "key": "PLAY_MENU.RESTART.BUTTON_TEXT",
+      "value": "Restart"
     }
   ]
 }
